2002-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Updated Windows CVS to FreeType 2.1.2.

2002-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Updated Windows CVS to Jasper 1.600.0.

2002-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Verify sanity of sysconf(_SC_PAGE_SIZE) and sysconf(_SC_PHYS_PAGES)
    before using their values.

2002-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Modified IMdisplay so that larger images may be loaded (primarily
    limited by Windows bitmap size limits).
  * Added some more file types (EPS, GIF, MIFF, SVG, & WMF) to IMdisplay's
    file open list.
  * The list management methods were given more meaningful names.

2002-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Modified IMdisplay so that Magick++ Images are stored by value rather
    than via pointer.
  * IMdisplay now uses minify(), magnify(), and zoom() methods where
    appropriate.

2002-11-04  Cristy  <cristy@mystic.es.dupont.com>
  * Quantizing a DirectClass image with less than 256 unique colors is
    no longer lossy.
  * Transparent TGA images had incorrect opacity values.

2002-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Added configure test for compiler __func__ support (HAS___func__).
  * Added configure test for ftime().

2002-10-31  Leonard Rosenthol <leonardr@lazerware.com>
  * CMYK + alpha layered PSD files now correctly read!

2002-10-30  Leonard Rosenthol <leonardr@lazerware.com>
  * ReadPSDImage() is now fully instrumented with logging
  * Fixed long standing bug in ReadPSDImage, so it no longer 
    returns an extra layer

2002-10-29  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
  * Added three output formats: PNG24 (24-bit RGB PNG, opaque only),
    PNG32 32-bit (RGBA PNG, semitransparency OK), and PNG8 (8-bit indexed
    PNG, binary transparency only).

2002-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>